Fixed form animation on mobile

--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,10 @@ input, button {
     width: 80%;
 }
 
+.input-wrapper {
+    position: relative;
+}
+
 input {
     padding: 1em 2.5em;
     border-radius: 25px;
@@ -121,22 +125,29 @@ input {
 }
 
 .warning {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    display: none;
-    /* transition: margin ease-in-out 1s; */
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translateX(-50%);
+    visibility: hidden;
+    opacity: 0;
+    transition: all ease-in-out 1.5s;
 }
 
 .form-warning {
-    margin-bottom: 2.15em;
+    margin-bottom: 2.65em;
+    transition: all ease-in-out 1s;
 }
 
 .input-warning {
+    margin-bottom: 2em;
     border-color: var(--light-red);
+    transition: all ease-in-out 1s;
 }
 
 .show {
-    display: block;
+    visibility: visible;
+    opacity: 1;
 }
 
 button {
